# gcp-api-workflow

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
gcp_api_workflow/: load_gcp.py
