[tool.poetry]
name = "gcp-api-workflow"
version = "0.1.0"
description = ""
authors = ["miroslaw-steblik <miroslawsteblik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
