[tool.poetry]
name = "gcp-api-workflow"
version = "0.1.0"
description = ""
authors = ["miroslaw-steblik <miroslawsteblik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
streamlit = "^1.35.0"
plotly = "^5.22.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.23.1"
db-dtypes = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
